--- a/W03.html
+++ b/W03.html
@@ -27,10 +27,11 @@
 			<div class="col-md-12">
 				<p>This assignment introduces user interaction with JavaScript. </p>
 				<p>The code is available at <a href="https://bitbucket.org/professorcase/w03">https://bitbucket.org/professorcase/w03</a>.</p>
-				<p>Change the name appearing on the menu above from to Yourpreferredname. </p>
+				<p>Change the name appearing on the menu above to W03 Yourpreferredname. </p>
 
-				<p>Currently, the application gets the user's name and the size of their ranch. The app calculates square miles and estimate
-					how many sheep they can hold on their land.</p>
+				<p>Currently, the application gets the user's name and the size of their ranch. 
+				   The app calculates square miles and estimates
+				   how many sheep they can hold on their land.</p>
 
 				<p>Can you help complete the app and make it more user-friendly?</p>
 				<br>
